# secure-notes

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  dependabot-rebase.yml  page.yml  rust.yml
scripts/: 1click.sh  docker-entrypoint.sh
src/: lib.rs  main.rs
website/: app-config.js  app.js  index.html  index.md  manifest.json  pow-worker.js  robots.txt  sitemap.xml  styles.css  sw.js
website/.well-known/agent-skills/: index.json
website/.well-known/mcp/: server-card.json
website/langs/: ar.json  bn.json  cn.json  de.json  en.json  es.json  fr.json  hi.json  pt.json  ru.json  ua.json  ur.json
